Confirmed article enrichment script runs well.  All articles enhanced with tags and excerpts.

--- a/content/articles/2024-06-22-the-looming-reality-of-national-ais.mdx
+++ b/content/articles/2024-06-22-the-looming-reality-of-national-ais.mdx
@@ -1,8 +1,17 @@
 ---
-title: "The Looming Reality of National AIs"
-date: "2024-06-22"
-slug: "the-looming-realityi-of-national-ais"
-featuredImage: "/images/looming-reality-of-national-ai.webp"
+title: The Looming Reality of National AIs
+date: '2024-06-22'
+slug: the-looming-realityi-of-national-ais
+featuredImage: /images/looming-reality-of-national-ai.webp
+excerpt: >-
+  National AI restrictions could reshape access, impacting global humanitarian
+  efforts and creating a new digital divide.
+tags:
+  - AI Regulation
+  - International Policy
+  - Humanitarian Technology
+  - Security Concerns
+  - Global Impact
 ---
 As we hurtle towards an AI-driven future, a significant paradigm shift is on the horizon - one that could fundamentally alter how we access and utilize artificial intelligence across international borders. Drawing on my 30 years of experience in evolving information systems for large-scale international efforts, I see striking parallels between our current AI trajectory and the restrictions placed on cryptography in the recent past.
 
