--- a/content/articles/2024-07-08-the-ai-revolution-in-it-adapting-mindsets-and-personalities-in-a-non-deterministic-world.mdx
+++ b/content/articles/2024-07-08-the-ai-revolution-in-it-adapting-mindsets-and-personalities-in-a-non-deterministic-world.mdx
@@ -1,9 +1,20 @@
 ---
-title: "The AI Revolution in IT: Adapting Mindsets and Personalities in a Non-Deterministic World"
-date: "2024-07-08"
-slug: "the-ai-revolution-in-it-adapting-mindsets-and-personalities-in-a-non-deterministic-world"
-excerpt: "This is my excerpt"
-featuredImage: "/images/adapting-mindsets-and-personalities-to-ai.webp"
+title: >-
+  The AI Revolution in IT: Adapting Mindsets and Personalities in a
+  Non-Deterministic World
+date: '2024-07-08'
+slug: >-
+  the-ai-revolution-in-it-adapting-mindsets-and-personalities-in-a-non-deterministic-world
+featuredImage: /images/adapting-mindsets-and-personalities-to-ai.webp
+tags:
+  - AI in IT
+  - Mindset Shift
+  - Emotional Intelligence
+  - Probabilistic Models
+  - IT Professional Development
+excerpt: >-
+  AI in IT demands a shift from deterministic control to embracing probabilistic
+  models and emotional adaptability.
 ---
 I've witnessed numerous technological shifts throughout my career. I recall the paradigm shifts of Object Oriented and Functional programming, the rise of the World Wide Web, and the form factor and freedom of the Mobile Device. However, the emergence of AI in IT development presents a unique challenge that goes beyond mere technical adaptation. It's a fundamental shift in how we approach problem-solving, the developer mindset, and could very well reshape the personality of the IT community as a whole. Already, I am beginning to see a rising culture clash that many in our industry are only beginning to recognize too.
 
