--- a/content/articles/2024-09-30-reflections-on-ai-governance-and-the-un-s-new-report.mdx
+++ b/content/articles/2024-09-30-reflections-on-ai-governance-and-the-un-s-new-report.mdx
@@ -1,8 +1,17 @@
 ---
-title: "Reflections on AI Governance and the UN's New Report"
-date: "2024-09-30"
-slug: "reflections-on-ai-governance-and-the-un-s-new-report"
-featuredImage: "/images/reflections-on-ai-governance-and-the-un.webp"
+title: Reflections on AI Governance and the UN's New Report
+date: '2024-09-30'
+slug: reflections-on-ai-governance-and-the-un-s-new-report
+featuredImage: /images/reflections-on-ai-governance-and-the-un.webp
+excerpt: >-
+  The UN's AI governance report urges global collaboration to ensure AI benefits
+  humanity ethically and equitably.
+tags:
+  - AI Governance
+  - Global Collaboration
+  - Ethical AI
+  - UN Report
+  - Technology Policy
 ---
 The UN's new report on "[Governing AI for Humanity](https://www.un.org/sites/un2.un.org/files/governing_ai_for_humanity_final_report_en.pdf)" is a wake-up call we can't ignore. As someone with 30 years of experience in evolving information systems for large-scale international efforts, here's why I believe this matters to every one of us:
 
