--- a/content/articles/2024-10-07-the-future-of-software-engineering-belongs-to-people-who-understand-why.mdx
+++ b/content/articles/2024-10-07-the-future-of-software-engineering-belongs-to-people-who-understand-why.mdx
@@ -1,8 +1,17 @@
 ---
-title: "The Future of Software Engineering Belongs to People who Understand Why"
-date: "2024-10-07"
-slug: "the-future-of-software-engineering-belongs-to-people-who-understand-why"
-featuredImage: "/images/future-of-software-engineering-belongs-to-people.webp"   
+title: The Future of Software Engineering Belongs to People who Understand Why
+date: '2024-10-07'
+slug: the-future-of-software-engineering-belongs-to-people-who-understand-why
+featuredImage: /images/future-of-software-engineering-belongs-to-people.webp
+excerpt: >-
+  The future of software engineering emphasizes understanding the 'Why' and
+  'What' over just coding skills.
+tags:
+  - Software Engineering
+  - AI Impact
+  - Human-Centric Design
+  - Future Trends
+  - Collaboration
 ---
 As someone with a long history of creating applicatyions and services, I've been pondering the future of software engineering in the age of AI. It's a topic generating a lot of buzz, with some claiming AI will replace software engineers entirely. But let's take a step back and look at the bigger picture.
 
