--- a/content/articles/2025-01-28-thoughts-on-deepseek.mdx
+++ b/content/articles/2025-01-28-thoughts-on-deepseek.mdx
@@ -1,8 +1,17 @@
 ---
-title: "Thoughts on Deepseek: The AI Hype Cycle & Geopolitical Bias"
-date: "2025-01-28"
-slug: "thoughts-on-deepseek"
-featuredImage: "/images/thoughts-on-deepseek.webp"
+title: 'Thoughts on Deepseek: The AI Hype Cycle & Geopolitical Bias'
+date: '2025-01-28'
+slug: thoughts-on-deepseek
+featuredImage: /images/thoughts-on-deepseek.webp
+excerpt: >-
+  Deepseek's low-cost AI model sparks debate on GPU demand and geopolitical bias
+  in AI adoption.
+tags:
+  - AI Development
+  - Geopolitical Bias
+  - GPU Demand
+  - Open Source AI
+  - Ethical Concerns
 ---
 TThe announcement of [Deepseek](https://api-docs.deepseek.com/news/news250120), an open-source AI LLM from a Chinese company boasting significantly lower training costs, has rightfully sparked global curiosity. But alongside the justified intrigue, there’s been an overreaction bordering on panic. Some companies are even considering abandoning their AI investments in favor of Deepseek. To me, this is an emotional response rather than a rational one.
 
