--- a/content/articles/2025-08-13-ai-code-and-copyright.mdx
+++ b/content/articles/2025-08-13-ai-code-and-copyright.mdx
@@ -1,8 +1,16 @@
 ---
-title: "AI, Code, and Copyright: What Engineering Leaders Should Actually Worry About"
-date: "2025-08-13"
-slug: "ai-code-and-copyright"
-featuredImage: "/images/digital_flow_of_human_code.webp"
+title: 'AI, Code, and Copyright: What Engineering Leaders Should Actually Worry About'
+date: '2025-08-13'
+slug: ai-code-and-copyright
+featuredImage: /images/digital_flow_of_human_code.webp
+excerpt: >-
+  AI-generated code rarely infringes copyright; focus on software quality and
+  compliance processes to manage risks.
+tags:
+  - AI Programming
+  - Copyright Law
+  - Software Risk Management
+  - Engineering Leadership
 ---
 **TLDR version:** AI pair programmers are not giant copy machines. Verbatim copying can happen in edge cases, yet the bigger business risks sit elsewhere. Treat this like any other software risk: understand where copyright protection applies, add guardrails, review outputs, and keep moving.
 
